<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.edu.ufabc.padm.uicomponents.EditTextDemo">

    <EditText
        android:id="@+id/normal_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/normal_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/email_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/email_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/uri_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textUri"
        android:hint="@string/uri_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/number_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="number"
        android:hint="@string/number_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/phone_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:hint="@string/phone_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/password_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/password_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/long_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:hint="@string/long_text"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/send_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:imeOptions="actionSend"
        android:hint="@string/send_text"
        android:padding="10dp"/>

    <AutoCompleteTextView
        android:id="@+id/autocomplete_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:hint="@string/autocomplete_text"
        />


</LinearLayout>
