<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.ufabc.padm.uicomponents.ActionBarDemo">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/action_remove" android:title="@string/action_remove"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete"/>
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_edit"/>
</menu>
